# neuralpgn

./: .gitignore  .prettierignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
scripts/: ingest-stats.ts
src/: App.css  App.tsx  chess.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ArchiveSection.tsx  ChessBoard.tsx  CommentsPanel.tsx  CompletionPanel.tsx  ConfirmDialog.tsx  CourseCard.tsx  CourseSidebar.tsx  CourseTabs.tsx  ErrorBoundary.tsx  KebabMenu.tsx  MoveNotationStrip.tsx  PgnDropZone.tsx  ProfileSelector.tsx  PromptDialog.tsx  RecoveryScreen.tsx  ReplayControls.tsx  SelectionBulkBar.tsx  SettingsDialog.tsx  ShortcutsOverlay.tsx  Toast.tsx  WalkCore.tsx
src/lib/: AnswerValidator.ts  AppSettings.ts  ArchiveUndoBuffer.ts  BackupManager.ts  BackupSerializer.ts  ChallengeHeuristic.ts  CompletionReviewPolicy.ts  CompletionStats.ts  CourseEntryResolver.ts  DailyLimitOverride.ts  DailySummary.ts  DeviationDetector.ts  FeedbackSounds.ts  FsAdapter.ts  GamePgnParser.ts  KeyboardShortcuts.ts  LichessGamesClient.ts  LichessStudyClient.ts  LichessStudyLocator.ts  LineReviewRecorder.ts  LineScheduler.ts  LineSidebarState.ts  MasteryEvaluator.ts  MidWalkExitPolicy.ts  MoveNotationFormatter.ts  MoveResolver.ts  NewLinesGate.ts  NextReviewFormatter.ts  PendingDeviationsResolver.ts  PgnIngestor.ts  ProfileStore.ts  (+20 more)
(+70 files in other folders)
