[package]
name = "neuralpgn"
version = "0.1.1"
edition = "2021"

[lib]
name = "neuralpgn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Same crate/features the sql plugin already pulls in (no new SQLite copy);
# used by sql_execute_atomic for real transactions, which plugin-sql's
# pooled execute() cannot provide.
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
